# capital-gain

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.bkp  Makefile  README.md  cases.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: linter.yml  merge_main.yml  pull_request_labeler.yml  release.yml  tests.yml  tests_case.yml  update_package.yml  validation.yml
cases/: all_input.txt  all_output.txt  case12_input.txt  case12_output.txt  case1_input.txt  case1_output.txt  case2_input.txt  case2_output.txt  case3_input.txt  case3_output.txt  case4_input.txt  case5_input.txt  case5_output.txt  case6_input.txt  case6_output.txt  case7_input.txt  case7_output.txt  case8_input.txt  case8_output.txt  ops1_input.txt  ops1_output.txt  ops2_input.txt  ops2_output.txt  test_case.sh
system/: __main__.py
system/application/dto/: base_dto.py  tax_dto.py
system/application/ports/inputs/: inputs_port.py
system/application/ports/usecase/: operation_tax_calculator_port.py
system/application/typings/: operation_type.py
system/application/usecase/: operation_tax_calculator.py
system/domain/constants/: operation.py
system/domain/entity/: base_entity.py  operation_entity.py
system/infrastructure/adapters/entrypoints/input/: stdin.py
tests/: conftest.py
tests/operation/: conftest.py  fixtures.py
tests/operation/stdin/: conftest.py  operation_stdin_test.py
tests/operation/usecase/: contest.py  operation_tax_calculator_test.py
tests/usecase/: contest.py  operation_tax_calculator_test.py
